crates/math-core/tests/snapshots/conversion_test__square_root_without_space.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\sqrt12"
---
<math>
    <msqrt>
        <mn>1</mn>
    </msqrt>
    <mn>2</mn>
</math>
