crates/math-core/tests/snapshots/conversion_test__standalone_everything.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "'''^a_b"
---
<math>
    <msubsup>
        <mrow></mrow>
        <mi>b</mi>
        <mrow>
            <mo>‴</mo>
            <mi>a</mi>
        </mrow>
    </msubsup>
</math>
