crates/math-core/tests/snapshots/conversion_test__standalone_superscript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: ^2F_3
---
<math>
    <msup>
        <mrow></mrow>
        <mn>2</mn>
    </msup>
    <msub>
        <mi>F</mi>
        <mn>3</mn>
    </msub>
</math>
