crates/math-core/tests/snapshots/conversion_test__standalone_underscore.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: _2F_3
---
<math>
    <msub>
        <mrow>
        </mrow>
        <mn>2</mn>
    </msub>
    <msub>
        <mi>F</mi>
        <mn>3</mn>
    </msub>
</math>
