crates/math-core/tests/snapshots/conversion_test__stretchy_bracket.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\left[ x  ( x + 2 ) \\right]"
---
<math>
    <mrow>
        <mo>[</mo>
        <mi>x</mi>
        <mo stretchy="false">(</mo>
        <mi>x</mi>
        <mo>+</mo>
        <mn>2</mn>
        <mo stretchy="false">)</mo>
        <mo>]</mo>
    </mrow>
</math>
