crates/math-core/tests/snapshots/conversion_test__sub_prime_super.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "f_3'^2"
---
<math>
    <msubsup>
        <mi>f</mi>
        <mn>3</mn>
        <mrow>
            <mo>′</mo>
            <mn>2</mn>
        </mrow>
    </msubsup>
</math>
